--- a/javaee7-simple/pom.xml
+++ b/javaee7-simple/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>com.binarytale.archetypes</groupId>
 	<artifactId>javaee7-simple-archetype</artifactId>
-	<version>1.0</version>
+	<version>1.1-SNAPSHOT</version>
 	<packaging>maven-archetype</packaging>
 
 	<name>javaee7-simple-archetype</name>
@@ -87,7 +87,7 @@
 		<connection>scm:git:git@github.com:yntelectual/maven-archetypes.git</connection>
 		<url>scm:git:git@github.com:yntelectual/maven-archetypes.git</url>
 		<developerConnection>scm:git:git@github.com:yntelectual/maven-archetypes.git</developerConnection>
-	  <tag>v1.0</tag>
+	  <tag>HEAD</tag>
   </scm>
 	<properties>
 		<maven.compiler.source>1.8</maven.compiler.source>
